--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ var _hmt = _hmt || [];
     <meta itemprop="honorificSuffix" content="PhD">
     <meta itemprop="url" content="https://biowr.github.io">
 <div class="row" style="display:block"><h1 id="site-title"><span itemprop="givenName">Rui</span> <span itemprop="familyName">Wang</span> <wbr>|<wbr> <ruby>
-<rb>王</rb><rp>(</rp><rt>wáng</rt><rp>)</rp></ruby>
-<ruby><rb>睿</rb><rp>(</rp><rt>ruì</rt><rp>)</rp></ruby>
+<rb>朝</rb><rp>(</rp><rt>zhāo</rt><rp>)</rp></ruby>
+<ruby><rb>菌</rb><rp>(</rp><rt>jùn</rt><rp>)</rp></ruby>
 </h1></div>
 <div class="row">
   <div class="intro-left" itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
