--- a/index.html
+++ b/index.html
@@ -38,18 +38,6 @@
       if (mathElements[i].tagName == "SPAN") { katex.render(texText.data, mathElements[i], { displayMode: mathElements[i].classList.contains("display"), throwOnError: false, macros:macros} );
     }}});
   </script>
-	
-	
- <!-- 百度统计 -->
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?e076e26dccfe62cef6ef9a32f56a65e5";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
 
  
   <!-- toggle selected publications 挑选的期刊 -->
@@ -89,7 +77,7 @@ var _hmt = _hmt || [];
     <br>
   </br>
 <!-- 首页头像 -->
-   <img width="210" height="210" src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/05/faces_logo.svg" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
+   <img width="210" height="210" src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/10/my-pic.jpg" style="border-radius:50%;max-width:80%" title="Lord Rui of the House Wang, the First of His Name, Guardian of the Art Gallery" alt="Photo of Rui Wang" itemprop="contentUrl">
 	</div>
   <div class="intro-right">
     
@@ -103,7 +91,7 @@ var _hmt = _hmt || [];
 <a href="/about.html"><strong>Learn more about me and my blog.</strong></a>
 <p> &ensp; </p>
 <p>Hello! I'm Rui Wang. Thank you for stopping by my site.</p>
-<p>During the day, I am a student at USTS.My research interests are bioinformatics.I'm also interested in more applied problems with nice theoretical components.I'm a serial side project maker. In the last 3 years, I've started 13 side projects in many different areas. Few are wildly popular. Many are dead. Several of them are still hanging around today.</p>
+<p>My research interests are bioinformatics.I'm also interested in more applied problems with nice theoretical components.I'm a serial side project maker. In the last 3 years, I've started 13 side projects in many different areas. Few are wildly popular. Many are dead. Several of them are still hanging around today.</p>
 <p>Thank you for stopping by! I would love to learn what brought you here. I want to hear your stories, your interests, and your questions.You can contact me through email <a href="mailto:i@ruiprime.cn"><samp itemprop="email">i@ruiprime.cn</samp></a>.</p>
 <br>
 </br>
