--- a/404.html
+++ b/404.html
@@ -16,7 +16,16 @@
     
     <link rel="stylesheet" href="/css/katex.min.css" crossorigin="anonymous">
  
-<!-- 百度统计-->
+<!-- 百度统计 -->
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?4ba60722347804b5aa4332404f1b43c4";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script> 
 
       
 <!-- 谷歌联盟-->     
