--- a/vlog/2022-10-06-Zhoushan.html
+++ b/vlog/2022-10-06-Zhoushan.html
@@ -14,7 +14,17 @@
     <meta property="article:tag" content="Flim, life">
 <!--页面标题-->
     <title>Life Film|Zhou Shan</title>  
-<!-- 百度统计-->
+
+<!-- 百度统计 -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?4ba60722347804b5aa4332404f1b43c4";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script> 
 
  <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet"> 
  <link rel="stylesheet" href="/css/katex.min.css"  crossorigin="anonymous">
