--- a/README.html
+++ b/README.html
@@ -17,6 +17,20 @@
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
+
+
+  <!-- 百度统计 -->
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?4ba60722347804b5aa4332404f1b43c4";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script> 
+
+
   </head>
   <body>
     <header class="hide-on-print">
