--- a/pages/vlog.html
+++ b/pages/vlog.html
@@ -70,6 +70,11 @@
 </tr>
 	
 <tr>
+    <td><a href="/vlog/2022-10-31-Love-yourself.html"><cite> life film|Love-yourself</cite></a></td>
+    <td class="right"><time>2022-10-30</time></td>
+</tr>
+
+<tr>
     <td><a href="/vlog/2022-10-06-Zhoushan.html"><cite> life film|Zhoushan</cite></a></td>
     <td class="right"><time>2022-10-06</time></td>
 </tr>
