--- a/pages/toolss.html
+++ b/pages/toolss.html
@@ -34,7 +34,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="https://chaoxuprime.com/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/404.html">
 <!--订阅-->
   </head>
   <body>
@@ -132,7 +132,7 @@
 	
       </article>
     </main>
-    <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="https://rickywang.baklib.com" rel="author">Rui Wang</a>. 
+    <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA" rel="author">Rui Wang</a>. 
     <a href="/README.html">Blog README</a>.</footer>
   
 
