--- a/vlog/2021-01-13-my2020.html
+++ b/vlog/2021-01-13-my2020.html
@@ -85,7 +85,7 @@
           
           </div>
 <div class="hide-on-print">
-    <div class="info">Posted by <a href="https://rickywang.baklib.com/">Ricky</a> </div>
+    <div class="info">Posted by <a href="https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA">Ricky</a> </div>
     <div class="info">Tags: Vlog, life.</div>
 </div>
       </article>
