--- a/vlog/2021-03-10-suzhou-zoo.html
+++ b/vlog/2021-03-10-suzhou-zoo.html
@@ -12,7 +12,7 @@
     <title>Life Film|Suzhou-ZOO</title> 
  <!--页面标题-->
 
-    <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/katex.min.css"  crossorigin="anonymous">
 	
 	
     
@@ -82,7 +82,7 @@
           
           </div>
 <div class="hide-on-print">
-    <div class="info">Posted by <a href="https://ruiprime.github.io/">Ricky</a> </div>
+    <div class="info">Posted by <a href="https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA">Ricky</a> </div>
     <div class="info">Tags: Vlog, life.</div>
 </div>
       </article>
