--- a/vlog/2022-0506-Dushulake/index.html
+++ b/vlog/2022-0506-Dushulake/index.html
@@ -28,7 +28,7 @@
 
 
  <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet"> 
- <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+ <link rel="stylesheet" href="/css/katex.min.css"  crossorigin="anonymous">
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
  <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
  <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
@@ -94,7 +94,7 @@
           
           </div>
 <div class="hide-on-print">
-    <div class="info">Posted by <a href="https://ruiprime.github.io/">Ricky</a> </div>
+    <div class="info">Posted by <a href="https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA">Ricky</a> </div>
     <div class="info">Tags: Vlog, life.</div>
 </div>
       </article>
