--- a/vlog/210618/index.html
+++ b/vlog/210618/index.html
@@ -25,7 +25,7 @@
   })();
   </script>
 
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" crossorigin="anonymous">
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
  <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
  <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
@@ -76,7 +76,7 @@
           
           </div>
 <div class="hide-on-print">
-    <div class="info">Posted by <a href="https://ruiprime.github.io/">Ricky</a> </div>
+    <div class="info">Posted by <a href="https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA">Ricky</a> </div>
     <div class="info">Tags: Vlog, life.</div>
 </div>
       </article>
