--- a/vlog/vlog1.html
+++ b/vlog/vlog1.html
@@ -12,18 +12,7 @@
     <title>金砖博物馆</title> 
  <!--页面标题-->
 
-    <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
-	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163975758-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-163975758-1');
-</script>
-
+    <link rel="stylesheet" href="/css/katex.min.css" crossorigin="anonymous">
     
 <!-- 百度统计 -->
 <script>
@@ -47,9 +36,6 @@
     <header class="hide-on-print">
         <div id="site-title">
             <a href="/blog.html">The Art Gallery Guardian</a>
-        </div>
-        <div style="display: none;">
-          <img src="/files/chao/chao_thumb.jpg">
         </div>
     </header>
     <nav class="hide-on-print">
@@ -98,12 +84,12 @@
           
           </div>
 <div class="hide-on-print">
-    <div class="info">Posted by <a href="https://rickywang.baklib.com/">Ricky</a> </div>
+    <div class="info">Posted by <a href="https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA">Ricky</a> </div>
     <div class="info">Tags: Vlog, life.</div>
 </div>
       </article>
     </main>
-    <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="https://rickywang.baklib.com" rel="author">Rui Wang</a>. Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+    <footer class="hide-on-print">© 2016 - <time><script>document.write(new Date().getFullYear())</script></time> <a href="https://www.aliyundrive.com/s/AwsUtD6DZL1" rel="author">Rui Wang</a>. Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
     <a href="/README.html">Blog README</a>.</footer>
   
 
