--- a/vlog/vlog19.html
+++ b/vlog/vlog19.html
@@ -12,7 +12,7 @@
     <title>Suzhou Dushu Lake Church</title> 
  <!--页面标题-->
 
-    <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/katex.min.css" crossorigin="anonymous">
 	
 
 <!-- 百度统计 -->
@@ -25,30 +25,18 @@
     s.parentNode.insertBefore(hm, s);
   })();
   </script> 
-  
 
-
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-4171915-2');
-  </script>
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/404.html">
 <!--订阅-->
   </head>
   <body>
     <header class="hide-on-print">
         <div id="site-title">
             <a href="/blog.html">The Art Gallery Guardian</a>
-        </div>
-        <div style="display: none;">
-          <img src="/files/wang/logo.png">
         </div>
     </header>
     <nav class="hide-on-print">
