--- a/vlog/vlog20.html
+++ b/vlog/vlog20.html
@@ -12,7 +12,7 @@
     <title>夏至——北半球一年中白昼最长、黑夜最短的一天</title> 
  <!--页面标题-->
 
-    <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/katex.min.css"  crossorigin="anonymous">
 
     
 <!-- 百度统计 -->
@@ -32,16 +32,13 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="https://chaoxuprime.com/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/404.html">
 <!--订阅-->
   </head>
   <body>
     <header class="hide-on-print">
         <div id="site-title">
             <a href="/blog.html">The Art Gallery Guardian</a>
-        </div>
-        <div style="display: none;">
-          <img src="/files/wang/logo.jpg">
         </div>
     </header>
     <nav class="hide-on-print">
@@ -89,7 +86,8 @@
           
           </div>
 <div class="hide-on-print">
-    <div class="info">Posted by <a href="https://rickywang.baklib.com/">Ricky</a> </div>
+    <div class="info">Posted by <a href="https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA
+      ">Ricky</a> </div>
     <div class="info">Tags: Vlog, life.</div>
 </div>
       </article>
