--- a/pages/film.html
+++ b/pages/film.html
@@ -94,7 +94,7 @@
           <br></br>
           <center>
             <strong> 
-        <a href='https://www.aliyundrive.com/s/AwsUtD6DZL1'>𝘐𝘴 𝘭𝘪𝘧𝘦 𝘢𝘭𝘸𝘢𝘺𝘴 𝘵𝘩𝘪𝘴 𝘩𝘢𝘳𝘥, 
+        <a href='https://www.aliyundrive.com/s/AwsUtD6DZL1' target="_blank">𝘐𝘴 𝘭𝘪𝘧𝘦 𝘢𝘭𝘸𝘢𝘺𝘴 𝘵𝘩𝘪𝘴 𝘩𝘢𝘳𝘥, 
           𝘰𝘳 𝘪𝘴 𝘪𝘵 𝘫𝘶𝘴𝘵 𝘸𝘩𝘦𝘯 𝘺𝘰𝘶'𝘳𝘦 𝘢 𝘬𝘪𝘥?</a>	
              </strong>	      
          </center>	
@@ -102,7 +102,7 @@
          <br></br>
           <center>
             <strong> 
-        <a href='https://www.aliyundrive.com/s/AwsUtD6DZL1'>ᵕ̈ ɴɪᴄᴇ 🌵 ᵕ̈</a>	
+        <a href='https://www.aliyundrive.com/s/AwsUtD6DZL1' target="_blank" >ᵕ̈ ɴɪᴄᴇ 🌵 ᵕ̈</a>	
              </strong>	      
          </center>	
          <br></br>
