--- a/pages/Weixin-gzh.html
+++ b/pages/Weixin-gzh.html
@@ -60,13 +60,11 @@
 <center><img width=33% src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/10/wxgzh-qrcode-2022.jpg"></center>
         <br>
         </br>
-        <br>
-        </br>
+<center><img width=80% src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/10/wxgzh-search-2022.png"></center>
+
 <center> <strong><em><a href='https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA'   target="_blank"  >关注微信公众号</a></em></strong> </center>
         <br>
-        </br>
-        <br>
-        </br>
+        </br>     
 <center>
   <strong> 
 <a href='https://mp.weixin.qq.com/s/3pQ_pumMcIPS7H5sXWq5lA' target="_blank" >About Me ： Proust Questionnaire</a>	
@@ -74,8 +72,7 @@
 </center>	
         <br>
         </br>
-        <br>
-        </br>
+        
       </article>
 
     </main>
