--- a/README.html
+++ b/README.html
@@ -69,6 +69,7 @@
 <li> <a href="https://drive.ruiprime.cn" target="_blank" > Onedrive-List</a> </li>
 <li> <a href="https://usts.ruiprime.cn" target="_blank" > Search-Nav</a> </li>
 <li> <a href="https://film.ruiprime.cn" target="_blank" > Film Pages</a> </li>
+<li> <a href="https://film.ruiprime.cn" target="_blank" > Film Pages</a> </li>
 </ol>
 
 <h1 id="notes"><span class="header-section-number">3</span> Social media</h1>
