--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,6 +12,9 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script>
+
+
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
@@ -51,7 +54,7 @@
     </nav>
     <main>
       <article>
-        <h1 id="article-title">📝 Posts</h1>
+        <h1 id="article-title">Posts</h1>
         <table class="postindex">
 <tbody>
 	
