--- a/pages/blog.html
+++ b/pages/blog.html
@@ -17,11 +17,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
     <meta name="author" content="Rui Wang">
-    <meta property="og:title" content="Vlog">
+    <meta property="og:title" content="Blog">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="">
-    <title>Vlog</title>
+    <title>Blog</title>
 
     <link rel="stylesheet" href="/css/katex.min.css"  crossorigin="anonymous">
 
