--- a/pages/tools.html
+++ b/pages/tools.html
@@ -15,7 +15,7 @@
     <title>Tools</title> 
  <!--页面标题-->
 
-    <link rel="stylesheet" href="/css/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/katex.min.css" crossorigin="anonymous">
 	
 	
 <!-- 百度统计-->
@@ -41,7 +41,7 @@
         <div id="site-title">
             <a href="/blog.html">The Art Gallery Guardian</a>
         </div>
-        
+
     </header>
     <nav class="hide-on-print">
       <ul>
