--- a/pages/film.html
+++ b/pages/film.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="">
-    <title>Vlog</title>
+    <title>Life Film</title>
 
     <link rel="stylesheet" href="/css/katex.min.css"  crossorigin="anonymous">
 
@@ -51,12 +51,8 @@
     </nav>
     <main>
       <article>
-        <h1 id="article-title">Vlog</h1>
-        <table class="postindex">
-          
 <!--文章主体-->	
-<article>
-  <h1 id="article-title">🎞️ Film</h1>
+  <h1 id="article-title">Film</h1>
 
   <br></br>
   <center>
