--- a/pages/tools.html
+++ b/pages/tools.html
@@ -59,8 +59,19 @@
         <article>
         <h1 id="article-title">🔧 Tools</h1>
 <p> </p>  
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-1293855853975663"
+     data-ad-slot="3895264043"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		<p> </p>  
-     
+          <br></br>
+          <br></br>
 	<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >关注微信公众号「GeneNote」 回复「pwd」获取下载密码</a></em></strong> </center>
 		<p> </p>  
           <br></br>
@@ -78,18 +89,18 @@
         <br>
         </br>
 
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
-     crossorigin="anonymous"></script>
-<!-- 横向图片长广告 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1293855853975663"
-     data-ad-slot="5193146308"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1293855853975663"
+        crossorigin="anonymous"></script>
+   <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-format="autorelaxed"
+        data-ad-client="ca-pub-1293855853975663"
+        data-ad-slot="3895264043"></ins>
+   <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
+
 <center>
 <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5vlmarpytrg&amp;m=0c&amp;c=ff0000&amp;cr1=ffffff&amp;f=times_new_roman&amp;l=1&amp;cw=ffffff&amp;cb=000000" async="async"></script>
 </center>
