--- a/pages/tools.html
+++ b/pages/tools.html
@@ -78,7 +78,7 @@
 		<center> <strong><em><a href='/pages/tools-back.html'   target="_blank"  >点我下载</a></em></strong> </center>
 
           <br></br>
-	<center><img width=33% src="https://tva1.sinaimg.cn/large/008i3skNgy1gtpgpg8y9uj60f20n60u602.jpg" referrerpolicy="no-referrer"></center>
+	<center><img width=33% src="https://jihulab.com/biowr/PicBed/-/raw/main/pictures/2022/10/wxgzh-search-2022.png" referrerpolicy="no-referrer"></center>
           <br></br>
 	<center> <strong><em> <a href='/pages/software-center.html'   target="_blank"  >Software Center </a></em></strong> </center>
 
