--- a/pages/blog.html
+++ b/pages/blog.html
@@ -59,7 +59,12 @@
                 <td><a href="/pages/notebook.html"><cite>Learn more about me and my blog</cite></a></td>
                 <td class="right"><time>2021-03-09</time></td>
             </tr> 	
-                
+
+	    <tr>
+                <td><a href="/posts/2023-09-26-chatgpt.html"><cite>ChatGPT LIST</cite></a></td>
+                <td class="right"><time>2023-09-26</time></td>
+            </tr> 
+	
             <tr>
                 <td><a href="/pages/bioinfo/notelist.html"><cite>Bioinformatics Notes</cite></a></td>
                 <td class="right"><time>2021-04-03</time></td>
