--- a/pages/blog.html
+++ b/pages/blog.html
@@ -162,7 +162,7 @@
 		</tr>
 		
 		<tr>
-		    <td><a href="https://mp.weixin.qq.com/s/JQ7hFnkP1DJeqUt9gkQY2g" target="_blank"  ><cite>最后一学期的想法</cite></a></td>
+		    <td><a href="/posts/2019-03-12-Thoughts.html" target="_blank"  ><cite>最后一学期的想法</cite></a></td>
 		    <td class="right"><time>2019-03-12</time></td>
 		</tr>   
 		    
