--- a/pages/blog.html
+++ b/pages/blog.html
@@ -56,7 +56,7 @@
 <tbody>
              
             <tr>
-                <td><a href="/pages/notebook.html"><cite>Learn more about me and my blog</cite></a></td>
+                <td><a href="/about.html"><cite>Learn more about me and my blog</cite></a></td>
                 <td class="right"><time>2021-03-09</time></td>
             </tr> 	
 
