--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </br>
 
 
-<p > <strong> I like to <a href="/pages/notebook.html"> write and study.</a> </strong></p>
+<p > <strong> I like to <a href="/pages/blog.html"> write and study.</a> </strong></p>
 <p><strong>I work,code and <a href="/pages/vlog.html"> photograph.</a>  </strong></p>  
 <a href="/about.html"><strong>Learn more about me and my blog.</strong></a>
 <p> &ensp; </p>
