--- a/pages/ai-tool-help.html
+++ b/pages/ai-tool-help.html
@@ -176,7 +176,7 @@
 
         <div class="contact-author">
             <span class="contact-link">
-                联系作者
+                联系作者,购买账号
                 <div class="contact-qr">
                     <img src="/pic/wx.webp" alt="联系作者">
                 </div>
