--- a/pages/ai-tool-help.html
+++ b/pages/ai-tool-help.html
@@ -8,95 +8,88 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 15px;
             background-color: #f5f5f5;
             color: #333;
-            line-height: 1.6;
+            line-height: 1.5;
         }
 
         .container {
             max-width: 800px;
             margin: 0 auto;
             background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 2px 15px rgba(0,0,0,0.08);
         }
 
         .support-methods {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin: 30px 0;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+            margin: 15px 0;
         }
 
         .support-card {
-            padding: 20px;
+            padding: 15px;
             border: 1px solid #eee;
-            border-radius: 8px;
+            border-radius: 10px;
             text-align: center;
             transition: all 0.3s ease;
             cursor: pointer;
             text-decoration: none;
             color: inherit;
+            background: #fafafa;
         }
 
         .support-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            transform: translateY(-3px);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+            background: white;
         }
 
         .payment-icon {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 10px;
+            width: 40px;
+            height: 40px;
+            margin-bottom: 8px;
         }
 
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-            margin-top: 10px;
-        }
-
-        .btn:hover {
-            background: #45a049;
+        .support-card h3 {
+            margin: 0;
+            font-size: 1.1em;
+            color: #2c3e50;
         }
 
         .section {
             text-align: center;
-            margin-top: 40px;
-            padding: 20px;
+            margin-top: 20px;
+            padding: 15px;
             border-top: 1px solid #eee;
         }
 
         .section h3 {
             color: #2c3e50;
-            margin-bottom: 20px;
+            margin: 0 0 10px 0;
+        }
+
+        .section p {
+            margin: 5px 0 10px;
+            color: #666;
         }
 
         .qr-code {
-            width: 200px;
-            height: 200px;
+            width: 160px;
+            height: 160px;
             margin: 0 auto;
             background: #eee;
             border-radius: 8px;
-        }
-
-        .payment-description {
-            margin: 15px 0;
-            color: #666;
+            overflow: hidden;
         }
 
         .contact-author {
             text-align: center;
-            margin-top: 30px;
-            padding-top: 20px;
+            margin-top: 20px;
+            padding-top: 15px;
             border-top: 1px solid #eee;
             position: relative;
         }
@@ -107,6 +100,7 @@
             text-decoration: underline;
             position: relative;
             display: inline-block;
+            font-size: 0.95em;
         }
 
         .contact-qr {
@@ -115,12 +109,12 @@
             left: 50%;
             transform: translateX(-50%);
             background: white;
-            padding: 10px;
+            padding: 8px;
             border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 15px rgba(0,0,0,0.1);
             display: none;
             z-index: 100;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
 
         .contact-qr::after {
@@ -129,7 +123,7 @@
             top: 100%;
             left: 50%;
             transform: translateX(-50%);
-            border-width: 8px;
+            border-width: 6px;
             border-style: solid;
             border-color: white transparent transparent transparent;
         }
@@ -139,14 +133,9 @@
         }
 
         .contact-qr img {
-            width: 150px;
-            height: 150px;
+            width: 120px;
+            height: 120px;
             border-radius: 4px;
-        }
-
-        .back-btn {
-            text-align: center;
-            margin-top: 20px;
         }
     </style>
 </head>
@@ -156,13 +145,11 @@
             <a href="https://chatgpt.com" class="support-card">
                 <img src="/pic/openai.svg" alt="ChatGPT" class="payment-icon">
                 <h3>ChatGPT</h3>
-
             </a>
 
             <a href="https://claude.ai" class="support-card">
                 <img src="/pic/claude.svg" alt="Claude" class="payment-icon">
                 <h3>Claude</h3>
-
             </a>
         </div>
 
@@ -182,8 +169,6 @@
                 </div>
             </span>
         </div>
-
-
     </div>
 </body>
 </html>
