--- a/pages/ai-tool-help.html
+++ b/pages/ai-tool-help.html
@@ -203,7 +203,7 @@
 
         <div class="section">
             <div class="appreciation-text">
-                如果对您有所帮助，欢迎打赏支持
+                如果对您有所帮助，欢迎微信打赏支持
             </div>
             <div class="support-options">
                 <span class="support-option">☕️ 请喝杯咖啡</span>
