--- a/pages/ai-tool-help.html
+++ b/pages/ai-tool-help.html
@@ -199,11 +199,16 @@
                 <img src="/pic/claude.svg" alt="Claude" class="payment-icon">
                 <h3>Claude</h3>
             </a>
+
+            <a href="https://gemini.google.com" class="support-card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Google_Gemini_logo.svg" alt="gemini" class="payment-icon">
+                <h3>Claude</h3>
+            </a>
         </div>
 
         <div class="section">
             <div class="appreciation-text">
-                如果对您有所帮助，欢迎微信打赏支持
+                如果对您有所帮助，欢迎微信打赏支持服务器费用
             </div>
             <div class="support-options">
                 <span class="support-option">☕️ 请喝杯咖啡</span>
