--- a/pages/ai-tool-help.html
+++ b/pages/ai-tool-help.html
@@ -202,7 +202,7 @@
 
             <a href="https://gemini.google.com" class="support-card">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Google_Gemini_logo.svg" alt="gemini" class="payment-icon">
-                <h3>Claude</h3>
+                <h3>Gemini</h3>
             </a>
         </div>
 
